# dotfiles

./: README.md  aliases  bash_profile  default-gems  gemrc  gitconfig  gitignore  irbrc  pryrc  psqlrc  railsrc  slate  slate.js  tmux.conf  vimrc  vimrc.bundles  zshrc
config/alacritty/: alacritty.yml
config/fish/: config.fish
config/fish/aliases/: ls.fish
config/fish/functions/: fish_prompt.fish  lsd.fish  p.fish  puma-logs.fish  reverse_history_search.fish
config/kitty/: kitty.conf  kitty.conf.save
config/nvim/: init.vim
config/tmuxinator/: spree.yml
hammerspoon/: init.lua
setup/: .rake_tasks  Brewfile  Brewfile.lock.json  Rakefile  install-vscode-extensions.sh  vscode.extensions
setup/man/man1/: git-churn.1  git-first-commit.1  git-fix.1  git-log-added.1  git-log-brief.1  git-log-files.1  git-log-patch.1  git-recent.1  git-review.1
setup/tools/: install.sh
setup/tools/guid/: Cargo.toml
setup/tools/guid/src/: main.rs
setup/tools/lsenv/: Cargo.toml
setup/tools/lsenv/src/: main.rs
setup/tools/lspath/: Cargo.toml
setup/tools/lspath/src/: main.rs
setup/tools/pver/: Cargo.toml  package.json
setup/tools/pver/src/: main.rs
setup/tools/trails/: Cargo.toml
setup/tools/trails/src/: main.rs
setup/tools/vscode-install-tasks/: Cargo.toml
setup/tools/vscode-install-tasks/src/: main.rs
