[package]
name = "guid"
version = "0.1.0"
authors = ["Jeremy W. Rowe <jeremywrowe@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "0.8", features = ["serde", "v4"] }
ansi_term = "0.12"
atty = "0.2"