[package]
name = "trails"
version = "0.1.0"
authors = ["Jeremy W. Rowe <jeremywrowe@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["blocking"] }
scraper = "0.12.0"